--- a/student_scores/score_table/templates/scores.html
+++ b/student_scores/score_table/templates/scores.html
@@ -28,7 +28,7 @@
             <th>Roll No</th>
         </tr>
 
-        {% for data in scoreTable %}
+        {% for data in students_data %}
         <tr>
             <td>{{ data.id }}</td>
             <td>{{ data.team_no }}</td>
