--- a/student_scores/score_table/templates/scores.html
+++ b/student_scores/score_table/templates/scores.html
@@ -27,15 +27,20 @@
             <th>Members</th>
             <th>Roll No</th>
         </tr>
-
+        {% for r in rank %}
         {% for data in students_data %}
+        {% if r == data.team_no %}
         <tr>
+            
             <td>{{ data.id }}</td>
             <td>{{ data.team_no }}</td>
             <td>{{ data.score }}</td>
             <td>{{ data.name }}</td>
             <td>{{ data.roll_no }}</td>
+           
         </tr>
+        {% endif %}
+        {% endfor %}
         {% endfor %}
 
     </table>
