--- a/student_scores/score_table/templates/scores.html
+++ b/student_scores/score_table/templates/scores.html
@@ -5,13 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Boot Strap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <title>Scores</title>
     <style>
-        table,
-        th,
-        td {
-            border: 1px solid black;
-            text-align: center;
+         /* body {
+            margin: 5%;
+        } */
+
+        table {
+            margin: 4%;
+        }
+
+        #toppers {
+            margin-left: 25%;
+            border-color: black;
+            width: 40%;
+
+            border-width: 10px;
+            margin-top: 1%;
         }
     </style>
 
@@ -19,21 +35,29 @@
 
 <body>
 
-    <table style="width:100%">
+    <div id="toppers" class="border">
+        <h2>🥇Rank 1 : </h2>
+        <h2>🥈Rank 2 : </h2>
+        <h2>🥉Rank 3 : </h2>
+    </div>
+</section>
+
+<table style="width:100%" class="table table-sm">
         <tr style="color: blue;">
-            <th>S.no</th>
             <th>Team No</th>
+            <th>Team Score</th>
             <th>Score</th>
             <th>Members</th>
             <th>Roll No</th>
         </tr>
-        {% for r in rank %}
+        {% for team_no,avg in rank.items %}
+        {% for id, num in count.items %}
+        {% if id == team_no %}
+    
+            <td rowspan= "{{ num }}" >{{ team_no  }}</td>
+            <td rowspan ="{{ num }}">{{ avg }}</td>
         {% for data in students_data %}
-        {% if r == data.team_no %}
-        <tr>
-            
-            <td>{{ data.id }}</td>
-            <td>{{ data.team_no }}</td>
+        {% if team_no == data.team_no %}
             <td>{{ data.score }}</td>
             <td>{{ data.name }}</td>
             <td>{{ data.roll_no }}</td>
@@ -41,7 +65,10 @@
         </tr>
         {% endif %}
         {% endfor %}
+        {% endif %}
         {% endfor %}
+        {% endfor %}
+
 
     </table>
 
