final wedpage with updated time and date

--- a/student_scores/score_table/templates/scores.html
+++ b/student_scores/score_table/templates/scores.html
@@ -15,6 +15,7 @@
     <style>
         body {
             margin: 5%;
+            background-color: #FFD9D9;
         }
 
         table {
@@ -28,7 +29,8 @@
 </head>
 
 <body>
-    <h1>KPRIET - CDC</h1>
+    <h1 style="display: inline;">KPRIET - CDC </h1>
+    <a style="position:relative; left:65%">{{ updateTime }}</a>
     <section id="Toppers" class="row info ">
         <div id="TopTeam" class="border col-sm-1 info">
             <h1>Rank</h1>
@@ -71,6 +73,8 @@
             </ol>
         </div>
     </section>
+
+    <br>
 
     <table style="width:100%" class="table table-dark table-striped">
         <tr style="color: rgb(108, 174, 255);">
